# Derived from Seaography (github.com/SeaQL/seaography)
# Modifications Copyright (c) 2025 Stephen J. Li

#[workspace]
#members = [
#    ".",
#    "derive",
#]

[package]
name = "async-graphql-template"
version = "0.3.0"
edition = "2021"
rust-version = "1.60"
authors = ["Panagiotis Karatakis <panagiotiskaratakis@gmail.com>"]
description = "🧭 A GraphQL framework and code generator for SeaORM"
license = "MIT OR Apache-2.0"
homepage = "https://www.sea-ql.org/Seaography"
documentation = "https://docs.rs/seaography"
repository = "https://github.com/SeaQL/seaography"
keywords = ["async", "graphql", "mysql", "postgres", "sqlite"]
categories = ["database"]

[dependencies]
itertools = { version = "0.10.3" }
heck = { version = "0.4.0" }
sea-orm = { version = "~1.1.5", default-features = false }
async-graphql = { version = "7.0", default-features = false }
async-graphql-template-derive = { version = "0.3.0", path = "./derive" }

[features]
default = []
with-chrono = ["async-graphql-template-derive/with-chrono", "sea-orm/with-chrono", "async-graphql/chrono"]
with-decimal = ["async-graphql-template-derive/with-decimal", "sea-orm/with-rust_decimal", "async-graphql/decimal"]
with-json = ["async-graphql-template-derive/with-json", "sea-orm/with-json"]
with-uuid = ["async-graphql-template-derive/with-uuid", "sea-orm/with-uuid"]
